Fixed navbar overlapping issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      padding-top: 73px;
 }
 .text-muted {
   color: #777777;
@@ -209,7 +210,7 @@ fieldset[disabled] .btn-xl.active {
 @media (min-width: 768px) {
   .navbar-custom {
     background-color: #222;
-    padding: 25px 0;
+    padding: 7px 0;
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
     transition: padding 0.3s;
